tests/compile_error/bad_set.rs
use getset2::Setter;

#[derive(Setter)]
#[set(foobar)]
struct Foobar {}

fn main() {}
