tests/compile_error/bad_set.stderr
error: invalid #[set(..)] attribute, cannot find parameter `foobar` in this scope
 --> tests/compile_error/bad_set.rs:4:1
  |
4 | #[set(foobar)]
  | ^
